@@ -80,26 +80,7 @@ public class CategoryConfigServiceImpl implements CategoryConfigService {
                 .name(categoryConfig.getCategory().getCategoryName())
                 .build();
 
-        Map<String, List<CompatibleOptionResponseDto>> compatibleGroupedByType = compatibleOptions.stream()
-                .collect(Collectors.groupingBy((option) -> option.getAttributeOption().getAttribute().getAttributeName(),
-                        Collectors.mapping(option -> CompatibleOptionResponseDto.builder()
-                                .compatibleOptionId(option.getId().toString())
-                                        .type(option.getAttributeOption().getAttribute().getAttributeName())
-                                        .price(option.getAttributeOption().getPriceAdjustment())
-                                        .name(option.getAttributeOption().getOptionName())
-                                        .media(option.getAttributeOption().getMedia())
-                                        .isCompatible(option.getIsCompatible())
-                                        .maxAmount(option.getAttributeOption().getMaxAmount())
-                                        .priceFactor(option.getAttributeOption().getPriceFactor())
-                                        .isMeasured(option.getAttributeOption().getAttribute().isMeasured())
-                                        .baseAmount(option.getAttributeOption().getBaseAmount())
-                                        .unit(option.getAttributeOption().getAttribute().getUnit())
-                                        .isIncluded(option.getIsIncluded())
-                                        .size(option.getSize())
-                                        .attributeId(option.getAttributeOption().getAttribute().getId().toString())
-                                        .attributeOptionId(option.getAttributeOption().getId().toString())
-                                        .build(),
-                                Collectors.toList())))
+        Map<String, List<CompatibleOptionResponseDto>> compatibleGroupedByType = mapToCompatibleOptionResponseDtoMap(compatibleOptions)
                 .entrySet()
                 .stream()
                 .filter(entry -> entry.getValue().stream().anyMatch(option -> option.isCompatible() || option.isIncluded()))
@@ -154,10 +135,17 @@ public class CategoryConfigServiceImpl implements CategoryConfigService {
                         .attributeOptionId(compatibleOption.getAttributeOption().getId().toString())
                         .build()).toList();
 
+        double totalPrice = compatibleOptionResponseDtoList
+                .stream()
+                .mapToDouble(compatibleOption ->  compatibleOption.price() != null ? compatibleOption.price().doubleValue() : 0.0)
+                .sum();
+
+
         return CompatibleOptionGetResponse.builder()
                 .name(categoryConfig.getCategory().getCategoryName())
                 .id(categoryConfig.getCategory().getId().toString())
                 .config(compatibleOptionResponseDtoList)
+                .configPrice(totalPrice)
                 .build();
     }
 
@@ -194,16 +182,46 @@ public class CategoryConfigServiceImpl implements CategoryConfigService {
     }
 
 
-    public List<String> extractAttributesFromCompatibleOptions(UUID categoryConfigId) {
+    public Map<String, List<CategoryConfigDisplay>> extractAttributesFromCompatibleOptions(UUID categoryConfigId) {
         List<CompatibleOption> compatibleOptions = compatibleOptionService.getAllCompatibleOptionsByCategoryConfig(categoryConfigId);
 
-        return compatibleOptions.stream()
-                .filter(option -> option.getIsIncluded())
-                .map(option -> option.getAttributeOption().getAttribute().getAttributeName())
-                .distinct()
-                .toList();
+        return mapToCompatibleOptionResponseDtoMap(compatibleOptions)
+                .entrySet()
+                .stream()
+                .filter(entry -> entry.getValue().stream().anyMatch(option -> option.isCompatible() || option.isIncluded()))
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .map(option -> new CategoryConfigDisplay(option.name(), option.isIncluded()))
+                                .collect(Collectors.toList())
+                ));
+
     }
 
+    private Map<String, List<CompatibleOptionResponseDto>>  mapToCompatibleOptionResponseDtoMap(List<CompatibleOption> compatibleOptions) {
+
+                return compatibleOptions.stream()
+                .collect(Collectors.groupingBy((option) -> option.getAttributeOption().getAttribute().getAttributeName(),
+                        Collectors.mapping(option -> CompatibleOptionResponseDto.builder()
+                                        .compatibleOptionId(option.getId().toString())
+                                        .type(option.getAttributeOption().getAttribute().getAttributeName())
+                                        .price(option.getAttributeOption().getPriceAdjustment())
+                                        .name(option.getAttributeOption().getOptionName())
+                                        .media(option.getAttributeOption().getMedia())
+                                        .isCompatible(option.getIsCompatible())
+                                        .maxAmount(option.getAttributeOption().getMaxAmount())
+                                        .priceFactor(option.getAttributeOption().getPriceFactor())
+                                        .isMeasured(option.getAttributeOption().getAttribute().isMeasured())
+                                        .baseAmount(option.getAttributeOption().getBaseAmount())
+                                        .unit(option.getAttributeOption().getAttribute().getUnit())
+                                        .isIncluded(option.getIsIncluded())
+                                        .size(option.getSize())
+                                        .attributeId(option.getAttributeOption().getAttribute().getId().toString())
+                                        .attributeOptionId(option.getAttributeOption().getId().toString())
+                                        .build(),
+                                Collectors.toList())));
+
+    }
     public Long extractProductCount(UUID category) {
         return productRepository.countProductsByCategoryId(category);
     }
